# rewise-neet-server

./: .env_sample  README.md  main.py  mcqs.json  pyproject.toml  sample.json  subject.json  subjects_chapters_topics.json
alembic/: env.py
alembic/versions/: 00539de55546_make_stageoption_label_nullable.py  0ac878630668_make_stageoption_text_nullable.py  12a270a30ec1_add_timestamps_to_users.py  1a5f3a6b6ec1_create_test_settings_table.py  61422c9f6854_add_difficulty_column_to_stagequestion.py  78064ffc7fbe_add_negative_marks_column_to_mock_test.py  8569295093fd_update_question_and_option_models.py  9604f0afac60_modify_stagequestion_nullable_fields_.py  df9a09756ae3_add_no_of_questions_and_is_active_to_.py  e016462c1834_remove_class_name_from_subjects.py  eb0fc38f0e39_add_formated_name_to_chapter_and_topic.py  ecdd7b0b29f0_create_subjects_domain.py  f4d721b40459_change_diagram_name_to_text.py
app/: main.py
app/core/: config.py  security.py
app/db/: base.py  init_db.py  session.py
app/dependencies/: __init__.py
app/domain/process_questions/: models.py  repository.py  routers.py  schemas.py  services.py
app/domain/questions/: models.py  repository.py  routers.py  schemas.py  services.py
app/domain/subjects/: models.py  repository.py  routers.py  schemas.py  services.py
app/domain/test/: models.py  repository.py  routers.py  schemas.py  services.py
app/domain/users/: models.py  repository.py  routers.py  schemas.py  services.py
app/interfaces/api/: router.py
app/utils/: string_utils.py
scripts/: prestart.sh  verify_subjects.py
